RESOLVED FIXED24659
Hit testing fails on an element that is rotated almost 90degrees in 3d
https://bugs.webkit.org/show_bug.cgi?id=24659
Summary Hit testing fails on an element that is rotated almost 90degrees in 3d
Simon Fraser (smfr)
Reported 2009-03-17 16:45:18 PDT
Hit testing fails on things that a rotated to be almost edge-on (say in a parent with perspective). The issue is that the hitTestRect that gets mapped through the inverse transform ends up with weird coords, and so the hitTestPoint falls outside of it.
Attachments
Patch, changelog, testcase (5.34 KB, patch)
2009-03-23 16:59 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-03-17 16:45:42 PDT
Simon Fraser (smfr)
Comment 2 2009-03-19 09:30:49 PDT
Another testcase in the url.
Simon Fraser (smfr)
Comment 3 2009-03-23 16:59:22 PDT
Created attachment 28875 [details] Patch, changelog, testcase
Dave Hyatt
Comment 4 2009-03-24 11:42:58 PDT
Comment on attachment 28875 [details] Patch, changelog, testcase r=me
Simon Fraser (smfr)
Comment 5 2009-03-24 14:08:20 PDT
Note You need to log in before you can comment on or make changes to this bug.